--- a/src/main/resources/templates/admin/subscript/subscriptAdd.html
+++ b/src/main/resources/templates/admin/subscript/subscriptAdd.html
@@ -1,10 +1,134 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"
+      xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="UTF-8">
-    <title>测评模型</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../../../static/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="../../../static/bootstrap/css/bootstrapValidator.min.css">
+    <link rel="stylesheet" href="../../../static/bootstrap/css/bootstrap-select.css">
+    <link rel="stylesheet" href="../../../static/bootstrap/css/treeview.css">
+
+    <link rel="stylesheet" href="../../../static/css/admin/subscript/subscriptAdd.css">
+
+    <title>指标维护</title>
 </head>
 <body>
+
+<div class="container">
+    <form class="form-horizontal" id="formAdd" action="#" method="post">
+
+        <div class="divBorder">
+            <h4 class="panel panel-heading h4font">
+                指标维护
+                <small>（＊星号是必填项）</small>
+            </h4>
+
+            <div class="panel-body">
+                <!-- 指标归类 -->
+                <div class="form-group">
+                    <label class="col-sm-4 control-label"><span style="color: red;font-weight: bold">＊</span>指标归类</label>
+                    <div class="col-sm-4" style="width: 305px">
+                        <input type="text" class="form-control" name="targetSort" style="float: left" placeholder="指标归类">
+                    </div>
+                    <button type="button" class="btn btn-info" data-target="#myModal" data-toggle="modal">选 择</button>
+                </div>
+                <!-- 评测项目 -->
+                <div class="form-group">
+                    <label class="col-sm-4 control-label"><span style="color: red;font-weight: bold">＊</span>评测项目</label>
+                    <div class="col-sm-4">
+                        <select class="form-control" id="evaluateItem">
+                            <option>评测项目1</option>
+                            <option selected>评测项目2</option>
+                            <option>评测项目3</option>
+                            <option>评测项目4</option>
+                            <option>评测项目5</option>
+                        </select>
+                    </div>
+                </div>
+                <!-- 评测指标 -->
+                <div class="form-group">
+                    <label class="col-sm-4 control-label"><span style="color: red;font-weight: bold">＊</span>评测指标</label>
+                    <div class="col-sm-4" style="width: 305px">
+                        <input type="text" class="form-control" name="evaluateTarget" style="float: left" placeholder="评测指标">
+                    </div>
+                    <button type="button" class="btn btn-info">选 择</button>
+                </div>
+                <!-- 是否启用 -->
+                <div class="form-group">
+                    <label class="col-sm-4 control-label"><span style="color: red;font-weight: bold">＊</span>是否启用</label>
+                    <div class="col-sm-6">
+                        <label class="radio-inline">
+                            <input type="radio" value="1" name="isUse">是
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" value="2" name="isUse">否
+                        </label>
+                    </div>
+                </div>
+                <!-- 评测周期 -->
+                <div class="form-group">
+                    <label class="col-sm-4 control-label"><span style="color: red;font-weight: bold">＊</span>评测周期</label>
+                    <div class="col-sm-4" style="width: 305px">
+                        <input type="text" class="form-control" name="evaluateCyc" style="float: left" placeholder="评测周期">
+                    </div>
+                    <button type="button" class="btn btn-info">选 择</button>
+                </div>
+                <!-- 权重 -->
+                <div class="form-group">
+                    <label class="col-sm-4 control-label"><span style="color: red;font-weight: bold">＊</span>权重</label>
+                    <div class="col-sm-4">
+                        <input type="text" class="form-control" name="proportion" placeholder="">
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <br>
+        <div class="form-group">
+            <div class="col-sm-offset-4 col-sm-1">
+                <button type="button" class="btn btn-primary">保 存</button>
+            </div>
+
+            <div class="col-sm-1">
+                <a href="#" class="btn btn-primary">返 回</a>
+            </div>
+        </div>
+    </form>
+</div>
+
+<!-- 指标归类-》选择岗位 -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                    &times;
+                </button>
+                <h4 class="modal-title" id="myModalLabel">
+                    选择指标归类
+                </h4>
+            </div>
+            <div class="modal-body">
+                在这里添加一些文本
+                <div id="tree"></div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                <button type="button" class="btn btn-primary">确定</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="../../../static/bootstrap/js/jquery-3.3.1.min.js"></script>
+<script src="../../../static/bootstrap/js/bootstrap.js"></script>
+<script src="../../../static/bootstrap/js/bootstrapValidator.min.js"></script>
+<script src="../../../static/bootstrap/js/bootstrap-select.js"></script>
+<script src="../../../static/bootstrap/js/i18n/defaults-zh_CN.js"></script>
+<script src="../../../static/js/admin/subscript/subscriptAdd.js"></script>
 
 </body>
 </html>
