--- a/src/main/resources/templates/include/Navigation.html
+++ b/src/main/resources/templates/include/Navigation.html
@@ -102,43 +102,6 @@
                             <li class="footer"><a href="#">View all</a></li>
                         </ul>
                     </li>
-                    <!-- Tasks Menu -->
-<!--                    <li class="dropdown tasks-menu">-->
-<!--                        &lt;!&ndash; Menu Toggle Button &ndash;&gt;-->
-<!--                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">-->
-<!--                            <i class="fa fa-flag-o"></i>-->
-<!--                            <span class="label label-danger">9</span>-->
-<!--                        </a>-->
-<!--                        <ul class="dropdown-menu">-->
-<!--                            <li class="header">You have 9 tasks</li>-->
-<!--                            <li>-->
-<!--                                &lt;!&ndash; Inner menu: contains the tasks &ndash;&gt;-->
-<!--                                <ul class="menu">-->
-<!--                                    <li>&lt;!&ndash; Task item &ndash;&gt;-->
-<!--                                        <a href="#">-->
-<!--                                            &lt;!&ndash; Task title and progress text &ndash;&gt;-->
-<!--                                            <h3>-->
-<!--                                                Design some buttons-->
-<!--                                                <small class="pull-right">20%</small>-->
-<!--                                            </h3>-->
-<!--                                            &lt;!&ndash; The progress bar &ndash;&gt;-->
-<!--                                            <div class="progress xs">-->
-<!--                                                &lt;!&ndash; Change the css width attribute to simulate progress &ndash;&gt;-->
-<!--                                                <div class="progress-bar progress-bar-aqua" style="width: 20%" role="progressbar"-->
-<!--                                                     aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">-->
-<!--                                                    <span class="sr-only">20% Complete</span>-->
-<!--                                                </div>-->
-<!--                                            </div>-->
-<!--                                        </a>-->
-<!--                                    </li>-->
-<!--                                    &lt;!&ndash; end task item &ndash;&gt;-->
-<!--                                </ul>-->
-<!--                            </li>-->
-<!--                            <li class="footer">-->
-<!--                                <a href="#">View all tasks</a>-->
-<!--                            </li>-->
-<!--                        </ul>-->
-<!--                    </li>-->
 
                     <!-- 用户账号信息菜单 -->
                     <li class="dropdown user user-menu">
@@ -231,7 +194,7 @@
 
     <!-- 主内容区域 -->
     <div class="content-wrapper">
-
+        <iframe src="../admin/subscript/subscriptAdd.html" style="width: 100%; height: 645px"></iframe>
     </div>
     <!-- 主内容区域结束 -->
 
