--- a/src/main/resources/templates/admin/subscript/subscriptAdd.html
+++ b/src/main/resources/templates/admin/subscript/subscriptAdd.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="../../../static/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../../../static/bootstrap/css/bootstrapValidator.min.css">
-    <link rel="stylesheet" href="../../../static/bootstrap/css/bootstrap-select.css">
-    <link rel="stylesheet" href="../../../static/bootstrap/css/treeview.css">
+    <link rel="stylesheet" href="static/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="static/bootstrap/css/bootstrapValidator.min.css">
+    <link rel="stylesheet" href="static/bootstrap/css/bootstrap-select.css">
+    <link rel="stylesheet" href="static/bootstrap/css/treeview.css">
 
-    <link rel="stylesheet" href="../../../static/css/admin/subscript/subscriptAdd.css">
+    <link rel="stylesheet" href="static/css/admin/subscript/subscriptAdd.css">
 
     <title>指标维护</title>
 </head>
@@ -33,7 +33,7 @@
                     <div class="col-sm-4" style="width: 305px">
                         <input type="text" class="form-control" name="targetSort" style="float: left" placeholder="指标归类">
                     </div>
-                    <button type="button" class="btn btn-info" data-target="#myModal" data-toggle="modal">选 择</button>
+                    <button id="targetSortBtn" type="button" class="btn btn-info" data-target="#myModal" data-toggle="modal">选 择</button>
                 </div>
                 <!-- 评测项目 -->
                 <div class="form-group">
