--- a/src/main/resources/templates/admin/subscript/subscriptAdd.html
+++ b/src/main/resources/templates/admin/subscript/subscriptAdd.html
@@ -30,10 +30,15 @@
                 <!-- 指标归类 -->
                 <div class="form-group">
                     <label class="col-sm-4 control-label"><span style="color: red;font-weight: bold">＊</span>指标归类</label>
-                    <div class="col-sm-4" style="width: 305px">
-                        <input type="text" readonly class="form-control" name="targetSort" style="float: left;" placeholder="指标归类">
+                    <div class="col-sm-4">
+                        <select class="form-control" id="targetSort">
+                            <option>指标归类1</option>
+                            <option selected>指标归类2</option>
+                            <option>指标归类3</option>
+                            <option>指标归类4</option>
+                            <option>指标归类5</option>
+                        </select>
                     </div>
-                    <button id="targetSortBtn" type="button" class="btn btn-info" data-target="#myModal" data-toggle="modal">选 择</button>
                 </div>
                 <!-- 评测项目 -->
                 <div class="form-group">
@@ -51,10 +56,15 @@
                 <!-- 评测指标 -->
                 <div class="form-group">
                     <label class="col-sm-4 control-label"><span style="color: red;font-weight: bold">＊</span>评测指标</label>
-                    <div class="col-sm-4" style="width: 305px">
-                        <input type="text" class="form-control" name="evaluateTarget" style="float: left" placeholder="评测指标">
+                    <div class="col-sm-4">
+                        <select class="form-control" id="evaluateTarget">
+                            <option>评测指标1</option>
+                            <option selected>评测指标2</option>
+                            <option>评测指标3</option>
+                            <option>评测指标4</option>
+                            <option>评测指标5</option>
+                        </select>
                     </div>
-                    <button type="button" class="btn btn-info">选 择</button>
                 </div>
                 <!-- 是否启用 -->
                 <div class="form-group">
@@ -71,10 +81,23 @@
                 <!-- 评测周期 -->
                 <div class="form-group">
                     <label class="col-sm-4 control-label"><span style="color: red;font-weight: bold">＊</span>评测周期</label>
-                    <div class="col-sm-4" style="width: 305px">
-                        <input type="text" class="form-control" name="evaluateCyc" style="float: left" placeholder="评测周期">
+                    <div class="col-sm-4">
+                        <select class="form-control" id="evaluateCyc">
+                            <option>评测周期1</option>
+                            <option selected>评测周期2</option>
+                            <option>评测周期3</option>
+                            <option>评测周期4</option>
+                            <option>评测周期5</option>
+                        </select>
                     </div>
-                    <button type="button" class="btn btn-info">选 择</button>
+                </div>
+                <!-- 调查人员 -->
+                <div class="form-group">
+                    <label class="col-sm-4 control-label"><span style="color: red;font-weight: bold">＊</span>调查人员</label>
+                    <div class="col-sm-4" style="width: 305px">
+                        <input type="text" readonly class="form-control" name="empRole" style="float: left;" placeholder="调查人员">
+                    </div>
+                    <button id="empRoleBtn" type="button" class="btn btn-info" data-target="#myModal" data-toggle="modal">选 择</button>
                 </div>
                 <!-- 权重 -->
                 <div class="form-group">
@@ -108,16 +131,15 @@
                     &times;
                 </button>
                 <h4 class="modal-title" id="myModalLabel">
-                    选择指标归类
+                    选择调查人员
                 </h4>
             </div>
             <div class="modal-body">
-                在这里添加一些文本
                 <div id="tree"></div>
             </div>
             <div class="modal-footer">
-                <button id="btn_targetSort_cancel" type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                <button id="btn_targetSort_ok" type="button" class="btn btn-primary">确定</button>
+                <button id="btn_empRole_cancel" type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                <button id="btn_empRole_ok" type="button" class="btn btn-primary">确定</button>
             </div>
         </div>
     </div>
