--- a/src/main/resources/templates/include/Navigation.html
+++ b/src/main/resources/templates/include/Navigation.html
@@ -163,13 +163,13 @@
             <ul class="sidebar-menu" data-widget="tree">
                 <li class="header">Content</li>
                 <li class="treeview">
-                    <a href="#"><i class="fa fa-link"></i> <span>我是多级目录</span>
+                    <a href="#"><i class="fa fa-link"></i> <span>指标维护</span>
                         <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="javascript:void(0)" class="myLeftMenu" data="add.html">我是add</a></li>
+                        <li><a href="javascript:void(0)" onclick="moveToSubscriptAdd()" class="myLeftMenu" data="add.html">指标维护添加</a></li>
                         <li><a href="javascript:void(0)" class="myLeftMenu" data="checkbox.html">点击是checkbox页面</a></li>
                         <li><a href="javascript:void(0)" class="myLeftMenu" data="userList.html">我是userList</a></li>
                     </ul>
@@ -194,7 +194,7 @@
 
     <!-- 主内容区域 -->
     <div class="content-wrapper">
-        <iframe src="../admin/subscript/subscriptAdd.html" style="width: 100%; height: 645px"></iframe>
+        <iframe id="mainIframe" src="" style="width: 100%; height: 645px"></iframe>
     </div>
     <!-- 主内容区域结束 -->
 
