--- a/src/main/resources/templates/include/Navigation.html
+++ b/src/main/resources/templates/include/Navigation.html
@@ -16,6 +16,15 @@
 
     <link rel="stylesheet" href="../../static/bootstrap/css/skins/skin-blue.min.css">
 
+    <style type="text/css">
+        html, body
+        {
+            margin: 0px 0px;
+            width: 100%;
+            height: 100%;
+        }
+    </style>
+
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
@@ -28,7 +37,7 @@
         </a>
 
         <!-- 公司名称右侧 -->
-        <nav class="navbar navbar-static-top" role="navigation">
+        <nav id="topMenu" class="navbar navbar-static-top" role="navigation">
             <!-- 导航栏隐藏键 -->
             <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
                 <span class="sr-only">Toggle navigation</span>
@@ -160,33 +169,8 @@
             </div>
 
             <!-- 选择菜单 -->
-            <ul class="sidebar-menu" data-widget="tree">
+            <ul id="menu" class="sidebar-menu" data-widget="tree">
                 <li class="header">Content</li>
-                <li class="treeview">
-                    <a href="#"><i class="fa fa-link"></i> <span>指标维护</span>
-                        <span class="pull-right-container">
-                <i class="fa fa-angle-left pull-right"></i>
-              </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="javascript:void(0)" onclick="moveToSubscriptAdd()" class="myLeftMenu" data="add.html">指标维护添加</a></li>
-                        <li><a href="javascript:void(0)" class="myLeftMenu" data="checkbox.html">点击是checkbox页面</a></li>
-                        <li><a href="javascript:void(0)" class="myLeftMenu" data="userList.html">我是userList</a></li>
-                    </ul>
-                </li>
-
-                <li class="treeview">
-                    <a href="#"><i class="fa fa-link"></i> <span>我是多级目录</span>
-                        <span class="pull-right-container">
-                <i class="fa fa-angle-left pull-right"></i>
-              </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li><a href="javascript:void(0)" class="myLeftMenu" data="add.html">我是add</a></li>
-                        <li><a href="javascript:void(0)" class="myLeftMenu" data="checkbox.html">点击是checkbox页面</a></li>
-                        <li><a href="javascript:void(0)" class="myLeftMenu" data="userList.html">我是userList</a></li>
-                    </ul>
-                </li>
             </ul>
         </section>
         <!-- 选择菜单结束 -->
@@ -194,12 +178,12 @@
 
     <!-- 主内容区域 -->
     <div class="content-wrapper">
-        <iframe id="mainIframe" src="" style="width: 100%; height: 645px"></iframe>
+        <iframe id="mainIframe" src="" scrolling=no style="width: 100%"></iframe>
     </div>
     <!-- 主内容区域结束 -->
 
     <!-- 主页面 页脚 -->
-    <footer class="main-footer">
+    <footer id="ifoot" class="main-footer">
         <div class="pull-right hidden-xs">
             Anything you want
         </div>
