2019-2-27 添加前清空input 添加publicMethod.js

--- a/src/main/resources/templates/admin/evaluationdescript/evaluationdescript.html
+++ b/src/main/resources/templates/admin/evaluationdescript/evaluationdescript.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>评测标准维护</title>
+    <title>评分标准描述维护</title>
 
     <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../static/bootstrap/css/bootstrap-table.css">
@@ -13,7 +13,7 @@
 
         <div class="divBorder">
             <h4 class="panel panel-heading h4font">
-                评分标准维护
+                评分标准描述维护
             </h4>
 
             <div class="panel-body">
@@ -52,15 +52,15 @@
             <div class="modal-body">
                 <div class="panel-body">
                     <form class="bs-example bs-example-form" role="form">
-                        <!-- 评分标准 -->
+                        <!-- 评测标准名称 -->
                         <div class="input-group">
-                            <span class="input-group-addon">评分标准</span>
-                            <input id="standard_add" type="text" class="form-control" placeholder="评分标准">
+                            <span class="input-group-addon">评测标准名称</span>
+                            <input id="standard_add" type="text" class="form-control" placeholder="评测标准名称">
                         </div><br>
-                        <!-- 分值 -->
+                        <!-- 评测标准描述 -->
                         <div class="input-group">
-                            <span class="input-group-addon">分值(%)</span>
-                            <input id="score_add" type="text" class="form-control" placeholder="分值(%)">
+                            <span class="input-group-addon">评测标准描述</span>
+                            <input id="description_add" type="text" class="form-control" placeholder="评测标准描述">
                         </div><br>
                     </form>
                 </div>
@@ -82,20 +82,20 @@
                     &times;
                 </button>
                 <h4 class="modal-title">
-                    修改评分标准
+                    修改评测项目
                 </h4>
             </div>
             <div class="modal-body">
                 <form class="bs-example bs-example-form" role="form">
-                    <!-- 评分标准 -->
+                    <!-- 评测标准名称 -->
                     <div class="input-group">
-                        <span class="input-group-addon">评分标准</span>
-                        <input id="standard_edit" type="text" class="form-control" placeholder="评分标准">
+                        <span class="input-group-addon">评测标准名称</span>
+                        <input id="standard_edit" type="text" class="form-control" placeholder="评测标准名称">
                     </div><br>
-                    <!-- 分值 -->
+                    <!-- 评测标准描述 -->
                     <div class="input-group">
-                        <span class="input-group-addon">分值(%)</span>
-                        <input id="score_edit" type="text" class="form-control" placeholder="分值(%)">
+                        <span class="input-group-addon">评测标准描述</span>
+                        <input id="description_edit" type="text" class="form-control" placeholder="评测标准描述">
                     </div><br>
                 </form>
             </div>
@@ -155,7 +155,7 @@
 <script src="../static/bootstrap/js/bootstrap-table.js"></script>
 <script src="../static/bootstrap/js/bootstrap.js"></script>
 <script src="../static/js/include/publicMethod.js"></script>
-<script src="../static/js/admin/satisfysurveytarget/satisfysurveytarget.js"></script>
+<script src="../static/js/admin/evaluationdescript/evaluationdescript.js"></script>
 
 </body>
 </html>
