--- a/src/main/resources/templates/admin/evaluationitem/evaluationitem.html
+++ b/src/main/resources/templates/admin/evaluationitem/evaluationitem.html
@@ -23,7 +23,7 @@
         <br>
         <div class="form-group">
             <div class="col-sm-offset-4 col-sm-1">
-                <button id="mainBtnAdd" type="button" class="btn btn-primary" data-target="#mainModalAdd" data-toggle="modal">添 加</button>
+                <button id="mainBtnAdd" type="button" class="btn btn-primary">添 加</button>
             </div>
 
             <div class="col-sm-1">
@@ -144,6 +144,7 @@
 <script src="../static/bootstrap/js/jquery-3.3.1.js"></script>
 <script src="../static/bootstrap/js/bootstrap-table.js"></script>
 <script src="../static/bootstrap/js/bootstrap.js"></script>
+<script src="../static/js/include/publicMethod.js"></script>
 <script src="../static/js/admin/evaluationitem/evaluationitem.js"></script>
 
 </body>
