--- a/src/main/resources/templates/admin/subscript/subscriptAdd.html
+++ b/src/main/resources/templates/admin/subscript/subscriptAdd.html
@@ -150,7 +150,7 @@
 <script src="../static/bootstrap/js/bootstrap-select.js"></script>
 <script src="../static/bootstrap/js/i18n/defaults-zh_CN.js"></script>
 <script src="../static/bootstrap/js/treeview.js"></script>
-
+<script src="../static/js/include/publicMethod.js"></script>
 <script src="../static/js/admin/subscript/subscriptAdd.js"></script>
 
 
