--- a/src/main/resources/templates/include/Navigation.html
+++ b/src/main/resources/templates/include/Navigation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>index</title>
+    <title>首页</title>
 
     <link rel="stylesheet" href="../../static/bootstrap/css/bootstrap.css">
 
